[gd_scene load_steps=6 format=3 uid="uid://b7togtnxg15ho"]

[ext_resource type="Script" path="res://ui/menu_ingame.gd" id="1_arjro"]
[ext_resource type="Texture2D" uid="uid://y6npssa3umbx" path="res://assets/sunset.jpg" id="1_ixahg"]
[ext_resource type="Theme" uid="uid://bhk63fxawy7ix" path="res://styles/btch_theme.tres" id="2_07wsj"]
[ext_resource type="PackedScene" uid="uid://b81wxo2et2dpp" path="res://ui/navigation_layer.tscn" id="2_e22mn"]

[sub_resource type="SystemFont" id="SystemFont_eu7yu"]
font_names = PackedStringArray("Arial")
subpixel_positioning = 0

[node name="MenuIngame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_arjro")

[node name="NavigationLayer" parent="." instance=ExtResource("2_e22mn")]
visible = false

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ixahg")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 25

[node name="TitleMarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 25

[node name="Label" type="Label" parent="MarginContainer/TitleMarginContainer"]
layout_mode = 2
theme = ExtResource("2_07wsj")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_font_sizes/font_size = 50
text = "BATTLECHESS
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 15
alignment = 1

[node name="ErrorLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.878431, 0, 0.113725, 1)
theme_override_font_sizes/font_size = 14
text = "placeholder error"

[node name="ExitButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 26)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = SubResource("SystemFont_eu7yu")
theme_override_font_sizes/font_size = 14
text = "Exit Game"

[connection signal="back_pressed" from="NavigationLayer" to="." method="_on_navigation_layer_back_pressed"]
[connection signal="menu_pressed" from="NavigationLayer" to="." method="_on_navigation_layer_menu_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
